deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: tools
  labels:
    app: registry
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
      version: v1
  template:
    metadata:
      labels:
        app: registry
        version: v1
    spec:
      containers:
        - image: registry:2
          name: registry
          ports:
            - containerPort: 5000
          volumeMounts:
            - mountPath: "/var/lib/registry"
              name: registry
      volumes:
        - name: registry
          persistentVolumeClaim:
            claimName: registry
