service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: tools
  labels:
    app: registry
spec:
  type: ClusterIP
  selector:
    app: registry
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
